<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright"
    android:orientation="vertical"
    tools:context="com.example.android.musicapp.SongsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/home_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/home" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:layout_weight="4"
            android:background="#2950c5"
            android:padding="20dp"
            android:text="Songs"
            android:textAllCaps="true"
            android:textSize="30sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#5cacee"
        android:text="@string/textView2"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/song1_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/holo_blue_light"
        android:padding="5dp"
        android:text="@string/song1"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/song2_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/holo_blue_light"
        android:padding="5dp"
        android:text="@string/song2"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/song3_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/holo_blue_light"
        android:padding="5dp"
        android:text="@string/song3"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/song4_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/holo_blue_light"
        android:padding="5dp"
        android:text="@string/song4"
        android:textSize="18sp" />

</LinearLayout>
