<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright"
    tools:context="com.example.android.musicapp.PlayerActivity">

    <LinearLayout
        android:id="@+id/text_view1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/home_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/home" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:layout_weight="4"
            android:background="#2950c5"
            android:padding="20dp"
            android:text="@string/textView3"
            android:textAllCaps="true"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#5cacee"
            android:orientation="horizontal"
            android:text="@string/textView4"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="100dp"
            android:background="#5cacee"
            android:text="@string/textView5"
            android:textSize="20sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/player_text_view"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="40dp"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/previous_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40dp"
            android:background="@drawable/previous" />

        <TextView
            android:id="@+id/pause_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/pause" />

        <TextView
            android:id="@+id/next_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40dp"
            android:background="@drawable/next" />
    </RelativeLayout>
</RelativeLayout>
